// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`game has a matching snapshot 1`] = `
Array [
  "Received 3 of Spades, 7 of Spades",
  "Passing 3 cards 1 to the right",
  "Received 3 of Diamonds, 7 of Diamonds, J of Diamonds from B",
  "B leads next trick",
  "B played 2 of Clubs",
  "C played J of Clubs",
  "D played K of Clubs",
  "D leads next trick",
  "D played 2 of Spades",
  "B played 8 of Spades",
  "C played K of Spades",
  "C leads next trick",
  "C played 5 of Diamonds",
  "D played A of Spades",
  "B played Q of Diamonds",
  "B leads next trick",
  "B played 6 of Clubs",
  "C played 3 of Clubs",
  "D played 5 of Clubs",
  "B leads next trick",
  "B played 10 of Clubs",
  "C played 7 of Clubs",
  "D played 9 of Clubs",
  "B leads next trick",
  "B played 4 of Diamonds",
  "C played K of Diamonds",
  "D played Q of Clubs",
  "C leads next trick",
  "C played 2 of Hearts",
  "D played 3 of Hearts",
  "B played K of Hearts",
  "B leads next trick",
  "B played A of Clubs",
  "C played A of Hearts",
  "D played 8 of Clubs",
  "B leads next trick",
  "B played 8 of Diamonds",
  "C played 9 of Diamonds",
  "D played J of Hearts",
  "C leads next trick",
  "C played 6 of Hearts",
  "D played 7 of Hearts",
  "B played 5 of Hearts",
  "D leads next trick",
  "D played 4 of Clubs",
  "B played Q of Spades",
  "C played 10 of Hearts",
  "D leads next trick",
  "D played 6 of Spades",
  "B played 4 of Spades",
  "C played 9 of Spades",
  "C leads next trick",
  "C played 5 of Spades",
  "D played 10 of Spades",
  "B played 9 of Hearts",
  "Received 0 points",
  "A: 0 B: 7 C: 1 D: 18",
  "Received 3 of Spades, 7 of Spades",
  "Passing 3 cards 1 to the left",
  "Received 5 of Diamonds, 9 of Diamonds, K of Diamonds from D",
  "B leads next trick",
  "B played 2 of Clubs",
  "C played J of Clubs",
  "D played Q of Clubs",
  "D leads next trick",
  "D played 2 of Spades",
  "B played 8 of Spades",
  "C played K of Spades",
  "C leads next trick",
  "C played 3 of Diamonds",
  "D played Q of Diamonds",
  "B played Q of Spades",
  "D leads next trick",
  "D played 3 of Hearts",
  "B played 5 of Hearts",
  "C played 2 of Hearts",
  "B leads next trick",
  "B played 5 of Clubs",
  "C played 3 of Clubs",
  "D played 4 of Clubs",
  "B leads next trick",
  "B played 6 of Clubs",
  "C played 7 of Clubs",
  "D played 8 of Clubs",
  "D leads next trick",
  "D played 4 of Diamonds",
  "B played A of Clubs",
  "C played J of Diamonds",
  "C leads next trick",
  "C played 7 of Diamonds",
  "D played 8 of Diamonds",
  "B played K of Hearts",
  "D leads next trick",
  "D played 7 of Hearts",
  "B played 9 of Hearts",
  "C played 6 of Hearts",
  "B leads next trick",
  "B played 9 of Clubs",
  "C played A of Hearts",
  "D played A of Spades",
  "B leads next trick",
  "B played 10 of Clubs",
  "C played 10 of Hearts",
  "D played J of Hearts",
  "Received 0 points",
  "A: 0 B: 18 C: 1 D: 33",
]
`;

exports[`game has a matching snapshot 2`] = `
Array [
  "Received 4 of Spades, K of Clubs",
  "Passing 3 cards 1 to the right",
  "Received 4 of Diamonds, 8 of Diamonds, Q of Diamonds from C",
  "B leads next trick",
  "C played J of Clubs",
  "D played K of Clubs",
  "A played A of Diamonds",
  "D leads next trick",
  "D played 2 of Spades",
  "A played J of Spades",
  "C played K of Spades",
  "C leads next trick",
  "C played 5 of Diamonds",
  "D played A of Spades",
  "A played 3 of Diamonds",
  "B leads next trick",
  "C played 3 of Clubs",
  "D played 5 of Clubs",
  "A played Q of Hearts",
  "B leads next trick",
  "C played 7 of Clubs",
  "D played 9 of Clubs",
  "A played J of Diamonds",
  "B leads next trick",
  "C played K of Diamonds",
  "D played Q of Clubs",
  "A played 10 of Diamonds",
  "C leads next trick",
  "C played 2 of Hearts",
  "D played 3 of Hearts",
  "A played 4 of Hearts",
  "B leads next trick",
  "C played A of Hearts",
  "D played 8 of Clubs",
  "A played 8 of Hearts",
  "B leads next trick",
  "C played 9 of Diamonds",
  "D played J of Hearts",
  "A played 7 of Diamonds",
  "C leads next trick",
  "C played 6 of Hearts",
  "D played 7 of Hearts",
  "A played 7 of Spades",
  "D leads next trick",
  "D played 4 of Clubs",
  "A played 6 of Diamonds",
  "C played 10 of Hearts",
  "D leads next trick",
  "D played 6 of Spades",
  "A played 3 of Spades",
  "C played 9 of Spades",
  "C leads next trick",
  "C played 5 of Spades",
  "D played 10 of Spades",
  "A played 2 of Diamonds",
  "Received 7 points",
  "A: 0 B: 7 C: 1 D: 18",
  "Received 4 of Spades, K of Clubs",
  "Passing 3 cards 1 to the left",
  "Received 5 of Clubs, 9 of Clubs, K of Clubs from A",
  "B leads next trick",
  "C played J of Clubs",
  "D played Q of Clubs",
  "A played A of Diamonds",
  "D leads next trick",
  "D played 2 of Spades",
  "A played J of Spades",
  "C played K of Spades",
  "C leads next trick",
  "C played 3 of Diamonds",
  "D played Q of Diamonds",
  "A played 10 of Diamonds",
  "D leads next trick",
  "D played 3 of Hearts",
  "A played 4 of Hearts",
  "C played 2 of Hearts",
  "B leads next trick",
  "C played 3 of Clubs",
  "D played 4 of Clubs",
  "A played Q of Hearts",
  "B leads next trick",
  "C played 7 of Clubs",
  "D played 8 of Clubs",
  "A played 8 of Hearts",
  "D leads next trick",
  "D played 4 of Diamonds",
  "A played 2 of Diamonds",
  "C played J of Diamonds",
  "C leads next trick",
  "C played 7 of Diamonds",
  "D played 8 of Diamonds",
  "A played 6 of Diamonds",
  "D leads next trick",
  "D played 7 of Hearts",
  "A played K of Diamonds",
  "C played 6 of Hearts",
  "B leads next trick",
  "C played A of Hearts",
  "D played A of Spades",
  "A played 9 of Diamonds",
  "B leads next trick",
  "C played 10 of Hearts",
  "D played J of Hearts",
  "A played 5 of Diamonds",
  "Received 11 points",
  "A: 0 B: 18 C: 1 D: 33",
]
`;

exports[`game has a matching snapshot 3`] = `
Array [
  "Received 5 of Spades, 9 of Spades",
  "Passing 3 cards 1 to the right",
  "Received 5 of Diamonds, 9 of Diamonds, K of Diamonds from D",
  "B leads next trick",
  "B played 2 of Clubs",
  "D played K of Clubs",
  "A played A of Diamonds",
  "D leads next trick",
  "D played 2 of Spades",
  "A played J of Spades",
  "B played 8 of Spades",
  "C leads next trick",
  "D played A of Spades",
  "A played 3 of Diamonds",
  "B played Q of Diamonds",
  "B leads next trick",
  "B played 6 of Clubs",
  "D played 5 of Clubs",
  "A played Q of Hearts",
  "B leads next trick",
  "B played 10 of Clubs",
  "D played 9 of Clubs",
  "A played J of Diamonds",
  "B leads next trick",
  "B played 4 of Diamonds",
  "D played Q of Clubs",
  "A played 10 of Diamonds",
  "C leads next trick",
  "D played 3 of Hearts",
  "A played 4 of Hearts",
  "B played K of Hearts",
  "B leads next trick",
  "B played A of Clubs",
  "D played 8 of Clubs",
  "A played 8 of Hearts",
  "B leads next trick",
  "B played 8 of Diamonds",
  "D played J of Hearts",
  "A played 7 of Diamonds",
  "C leads next trick",
  "D played 7 of Hearts",
  "A played 7 of Spades",
  "B played 5 of Hearts",
  "D leads next trick",
  "D played 4 of Clubs",
  "A played 6 of Diamonds",
  "B played Q of Spades",
  "D leads next trick",
  "D played 6 of Spades",
  "A played 3 of Spades",
  "B played 4 of Spades",
  "C leads next trick",
  "D played 10 of Spades",
  "A played 2 of Diamonds",
  "B played 9 of Hearts",
  "Received 1 points",
  "A: 0 B: 7 C: 1 D: 18",
  "Received 5 of Spades, 9 of Spades",
  "Passing 3 cards 1 to the left",
  "Received 3 of Diamonds, 7 of Diamonds, J of Diamonds from B",
  "B leads next trick",
  "B played 2 of Clubs",
  "D played Q of Clubs",
  "A played A of Diamonds",
  "D leads next trick",
  "D played 2 of Spades",
  "A played J of Spades",
  "B played 8 of Spades",
  "C leads next trick",
  "D played Q of Diamonds",
  "A played 10 of Diamonds",
  "B played Q of Spades",
  "D leads next trick",
  "D played 3 of Hearts",
  "A played 4 of Hearts",
  "B played 5 of Hearts",
  "B leads next trick",
  "B played 5 of Clubs",
  "D played 4 of Clubs",
  "A played Q of Hearts",
  "B leads next trick",
  "B played 6 of Clubs",
  "D played 8 of Clubs",
  "A played 8 of Hearts",
  "D leads next trick",
  "D played 4 of Diamonds",
  "A played 2 of Diamonds",
  "B played A of Clubs",
  "C leads next trick",
  "D played 8 of Diamonds",
  "A played 6 of Diamonds",
  "B played K of Hearts",
  "D leads next trick",
  "D played 7 of Hearts",
  "A played K of Diamonds",
  "B played 9 of Hearts",
  "B leads next trick",
  "B played 9 of Clubs",
  "D played A of Spades",
  "A played 9 of Diamonds",
  "B leads next trick",
  "B played 10 of Clubs",
  "D played J of Hearts",
  "A played 5 of Diamonds",
  "Received 0 points",
  "A: 0 B: 18 C: 1 D: 33",
]
`;

exports[`game has a matching snapshot 4`] = `
Array [
  "Received 6 of Spades, 10 of Spades",
  "Passing 3 cards 1 to the right",
  "Received 5 of Clubs, 9 of Clubs, K of Clubs from A",
  "B leads next trick",
  "B played 2 of Clubs",
  "C played J of Clubs",
  "A played A of Diamonds",
  "D leads next trick",
  "A played J of Spades",
  "B played 8 of Spades",
  "C played K of Spades",
  "C leads next trick",
  "C played 5 of Diamonds",
  "A played 3 of Diamonds",
  "B played Q of Diamonds",
  "B leads next trick",
  "B played 6 of Clubs",
  "C played 3 of Clubs",
  "A played Q of Hearts",
  "B leads next trick",
  "B played 10 of Clubs",
  "C played 7 of Clubs",
  "A played J of Diamonds",
  "B leads next trick",
  "B played 4 of Diamonds",
  "C played K of Diamonds",
  "A played 10 of Diamonds",
  "C leads next trick",
  "C played 2 of Hearts",
  "A played 4 of Hearts",
  "B played K of Hearts",
  "B leads next trick",
  "B played A of Clubs",
  "C played A of Hearts",
  "A played 8 of Hearts",
  "B leads next trick",
  "B played 8 of Diamonds",
  "C played 9 of Diamonds",
  "A played 7 of Diamonds",
  "C leads next trick",
  "C played 6 of Hearts",
  "A played 7 of Spades",
  "B played 5 of Hearts",
  "D leads next trick",
  "A played 6 of Diamonds",
  "B played Q of Spades",
  "C played 10 of Hearts",
  "D leads next trick",
  "A played 3 of Spades",
  "B played 4 of Spades",
  "C played 9 of Spades",
  "C leads next trick",
  "C played 5 of Spades",
  "A played 2 of Diamonds",
  "B played 9 of Hearts",
  "Received 18 points",
  "A: 0 B: 7 C: 1 D: 18",
  "Received 6 of Spades, 10 of Spades",
  "Passing 3 cards 1 to the left",
  "Received 4 of Diamonds, 8 of Diamonds, Q of Diamonds from C",
  "B leads next trick",
  "B played 2 of Clubs",
  "C played J of Clubs",
  "A played A of Diamonds",
  "D leads next trick",
  "A played J of Spades",
  "B played 8 of Spades",
  "C played K of Spades",
  "C leads next trick",
  "C played 3 of Diamonds",
  "A played 10 of Diamonds",
  "B played Q of Spades",
  "D leads next trick",
  "A played 4 of Hearts",
  "B played 5 of Hearts",
  "C played 2 of Hearts",
  "B leads next trick",
  "B played 5 of Clubs",
  "C played 3 of Clubs",
  "A played Q of Hearts",
  "B leads next trick",
  "B played 6 of Clubs",
  "C played 7 of Clubs",
  "A played 8 of Hearts",
  "D leads next trick",
  "A played 2 of Diamonds",
  "B played A of Clubs",
  "C played J of Diamonds",
  "C leads next trick",
  "C played 7 of Diamonds",
  "A played 6 of Diamonds",
  "B played K of Hearts",
  "D leads next trick",
  "A played K of Diamonds",
  "B played 9 of Hearts",
  "C played 6 of Hearts",
  "B leads next trick",
  "B played 9 of Clubs",
  "C played A of Hearts",
  "A played 9 of Diamonds",
  "B leads next trick",
  "B played 10 of Clubs",
  "C played 10 of Hearts",
  "A played 5 of Diamonds",
  "Received 15 points",
  "A: 0 B: 18 C: 1 D: 33",
]
`;
